--- a/notebooks/reports/201803-GabrielBogo-Radar_data_cleaning.ipynb
+++ b/notebooks/reports/201803-GabrielBogo-Radar_data_cleaning.ipynb
@@ -9527,7 +9527,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "key = \"avg_per_quarter.csv\"\n",
@@ -9539,9 +9541,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_python3",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda_python3"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -9553,7 +9555,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
