checkpoint optimization, temporary allocation with one groups of census zones per flow datapoint

--- a/notebooks/reports/201803-GabrielBogo-Optimization_CensusSectorsAllocation.ipynb
+++ b/notebooks/reports/201803-GabrielBogo-Optimization_CensusSectorsAllocation.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -21,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +134,7 @@
        "420910205000162  2.165143e+06  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +326,8 @@
     }
    ],
    "source": [
-    "max_setores = len(df_sectors)\n",
+    "sector_list = df_sectors.index.unique().tolist()\n",
+    "max_setores = len(sector_list)\n",
     "print(\"Initial number of sectors: \",max_setores)\n",
     "\n",
     "df_equip = pd.read_csv(project_dir + \"/data/interim/od/avg_per_quarter_815.csv\")\n",
@@ -344,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +413,7 @@
        "FS589JOI           2"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +520,7 @@
        "FS557JOI     154.0         0.007665            6"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +796,7 @@
        "[5 rows x 100 columns]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -812,26 +815,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "TopologyException: side location conflict at 717318.9423 7092994.8300000001\n",
-      "TopologyException: side location conflict at 719465.01240000001 7082903.9400000004\n",
-      "TopologyException: side location conflict at 719465.01240000001 7082903.9400000004\n",
-      "TopologyException: side location conflict at 719465.01240000001 7082903.9400000004\n",
-      "TopologyException: side location conflict at 719465.01240000001 7082903.9400000004\n",
-      "TopologyException: side location conflict at 717318.9423 7092994.8300000001\n"
+      "ERROR:shapely.geos:TopologyException: side location conflict at 717318.9423 7092994.8300000001\n",
+      "ERROR:shapely.geos:TopologyException: side location conflict at 719465.01240000001 7082903.9400000004\n",
+      "ERROR:shapely.geos:TopologyException: side location conflict at 719465.01240000001 7082903.9400000004\n",
+      "ERROR:shapely.geos:TopologyException: side location conflict at 719465.01240000001 7082903.9400000004\n",
+      "ERROR:shapely.geos:TopologyException: side location conflict at 719465.01240000001 7082903.9400000004\n",
+      "ERROR:shapely.geos:TopologyException: side location conflict at 717318.9423 7092994.8300000001\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Matrix created in 322 seconds.\n"
+      "Matrix created in 351 seconds.\n"
      ]
     },
     {
@@ -1088,7 +1091,7 @@
        "[5 rows x 730 columns]"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1116,115 +1119,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "image/svg+xml": [
-       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"300\" height=\"300\" viewBox=\"717059.6435679999 7092682.582568 561.3625640000682 599.4332640003413\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,14185964.5984)\"><path fill-rule=\"evenodd\" fill=\"#ff3333\" stroke=\"#555555\" stroke-width=\"3.996221760002275\" opacity=\"0.6\" d=\"M 717233.8242,7093167.3363 L 717273.1948,7093226.0727 L 717297.0367,7093259.8146 L 717396.8742,7093219.8931 L 717464.5617,7093191.2745 L 717498.8403,7093173.9603 L 717533.8722,7093141.5619 L 717568.1997,7093110.0629 L 717598.8049,7093081.8383 L 717558.3772,7093013.8044 L 717509.1958,7092917.221 L 717454.5641,7092864.3877 L 717401.7547,7092815.0745 L 717354.6245,7092769.7552 L 717283.8904,7092704.7838 L 717233.3385,7092753.2921 L 717227.144,7092759.2713 L 717161.4762,7092822.3269 L 717081.8448,7092906.4534 L 717097.57,7092938.8857 L 717161.2904,7093055.2848 L 717194.7674,7093103.707 L 717233.8242,7093167.3363 L 717318.9423,7092994.83 L 717355.0948,7093037.8826 L 717299.7863,7093084.6565 L 717237.3385,7092999.4767 L 717284.9228,7092961.5651 L 717318.9423,7092994.83 L 717233.8242,7093167.3363 z\" /></g></svg>"
-      ],
-      "text/plain": [
-       "<shapely.geometry.polygon.Polygon at 0x7f8bbbf96358>"
-      ]
-     },
-     "execution_count": 116,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_sectors.loc[420910205000341, \"polygon\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "image/svg+xml": [
-       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"127.60361199988984\" height=\"132.93871199898422\" viewBox=\"717232.414844 7092956.641444 127.60361199988984 132.93871199898422\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,14186046.2216)\"><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"2.0\" opacity=\"0.6\" d=\"M 717299.7863,7093084.6565 L 717355.0948,7093037.8826 L 717318.9423,7092994.83 L 717284.9228,7092961.5651 L 717237.3385,7092999.4767 L 717299.7863,7093084.6565 z\" /></g></svg>"
-      ],
-      "text/plain": [
-       "<shapely.geometry.polygon.Polygon at 0x7f8bbc7a3278>"
-      ]
-     },
-     "execution_count": 117,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_sectors.loc[420910205000737, \"polygon\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "image/svg+xml": [
-       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"300\" height=\"300\" viewBox=\"718959.123944 7082238.698543999 832.8048120000167 1493.9304120009765\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,14165971.3275)\"><path fill-rule=\"evenodd\" fill=\"#ff3333\" stroke=\"#555555\" stroke-width=\"9.95953608000651\" opacity=\"0.6\" d=\"M 719318.93,7083677.2982 L 719623.9804,7083420.4036 L 719648.4531,7083396.8245 L 719671.0399,7083368.0608 L 719693.3467,7083325.0078 L 719715.296,7083258.9091 L 719731.3384,7083162.6576 L 719736.598,7083055.9469 L 719726.3583,7082976.2134 L 719694.7717,7082888.3159 L 719658.6651,7082883.057 L 719640.7867,7082871.7215 L 719623.0371,7082848.9726 L 719601.7679,7082820.0794 L 719576.8826,7082789.9112 L 719535.4167,7082759.1381 L 719498.1119,7082732.0743 L 719440.896,7082696.6919 L 719334.4218,7082624.5837 L 719306.546,7082581.2794 L 719264.3208,7082499.5373 L 719226.1955,7082447.4401 L 719184.0882,7082421.1057 L 719148.1154,7082397.1481 L 719106.789,7082367.1219 L 719086.1778,7082340.8701 L 719032.4601,7082294.0293 L 719051.4513,7082629.8423 L 719062.9834,7082766.7494 L 719063.634,7082817.6697 L 719072.5978,7082902.9111 L 719014.4547,7083605.2368 L 719188.8918,7083646.7057 L 719318.93,7083677.2982 L 719465.0124,7082903.94 L 719537.5753,7082953.6492 L 719492.1272,7083035.6747 L 719416.6819,7082982.3559 L 719343.945,7082930.9504 L 719389.4489,7082852.1745 L 719465.0124,7082903.94 L 719318.93,7083677.2982 z\" /></g></svg>"
-      ],
-      "text/plain": [
-       "<shapely.geometry.polygon.Polygon at 0x7f8bbc894e10>"
-      ]
-     },
-     "execution_count": 118,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_sectors.loc[420910205000458, \"polygon\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "image/svg+xml": [
-       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"131.43217600008938\" height=\"142.2734759990126\" viewBox=\"719411.412512 7082898.670612001 131.43217600008938 142.2734759990126\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,14165939.6147)\"><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"2.0\" opacity=\"0.6\" d=\"M 719416.6819,7082982.3559 L 719492.1272,7083035.6747 L 719537.5753,7082953.6492 L 719465.0124,7082903.94 L 719416.6819,7082982.3559 z\" /></g></svg>"
-      ],
-      "text/plain": [
-       "<shapely.geometry.polygon.Polygon at 0x7f8bbc894710>"
-      ]
-     },
-     "execution_count": 126,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_sectors.loc[420910205000459, \"polygon\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "image/svg+xml": [
-       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"131.48191200010478\" height=\"140.59591199923307\" viewBox=\"719338.7377439999 7082846.967244 131.48191200010478 140.59591199923307\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,14165834.5304)\"><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"2.0\" opacity=\"0.6\" d=\"M 719416.6819,7082982.3559 L 719465.0124,7082903.94 L 719389.4489,7082852.1745 L 719343.945,7082930.9504 L 719416.6819,7082982.3559 z\" /></g></svg>"
-      ],
-      "text/plain": [
-       "<shapely.geometry.polygon.Polygon at 0x7f8bbc7af978>"
-      ]
-     },
-     "execution_count": 127,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_sectors.loc[420910205000608, \"polygon\"]"
    ]
@@ -1238,20 +1171,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "Non-constant expressions cannot be multiplied",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-135-ac30c1b8de9c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     32\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0msector1\u001b[0m \u001b[0;32min\u001b[0m \u001b[0msector_list\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0msector2\u001b[0m \u001b[0;32min\u001b[0m \u001b[0msector_list\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 34\u001b[0;31m             vars_to_sum.append(adjacency_matrix.loc[sector1,sector2]                               *choice_equip_sector[sector1][equip]                               *choice_equip_sector[sector2][equip]                               *(1/2) #to take into account that each adjacency shows up in both diagonal halfs of the matrix\n\u001b[0m\u001b[1;32m     35\u001b[0m                               )\n\u001b[1;32m     36\u001b[0m     \u001b[0mprob\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mpulp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlpSum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvars_to_sum\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mpulp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlpSum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnum_sectors\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/bogo/anaconda3/lib/python3.6/site-packages/pulp/pulp.py\u001b[0m in \u001b[0;36m__mul__\u001b[0;34m(self, other)\u001b[0m\n\u001b[1;32m    785\u001b[0m                         \u001b[0me\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mc\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    786\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mother\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mLpVariable\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 787\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mLpAffineExpression\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mother\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    788\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    789\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mother\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/bogo/anaconda3/lib/python3.6/site-packages/pulp/pulp.py\u001b[0m in \u001b[0;36m__mul__\u001b[0;34m(self, other)\u001b[0m\n\u001b[1;32m    773\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mother\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    774\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 775\u001b[0;31m                     \u001b[0;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Non-constant expressions cannot be multiplied\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    776\u001b[0m                 \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    777\u001b[0m                     \u001b[0mc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconstant\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: Non-constant expressions cannot be multiplied"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimization run in 19 seconds.\n"
      ]
     }
    ],
@@ -1277,24 +1204,24 @@
     "    vars_to_sum = [choice_equip_sector[sector][equip] for sector in sector_list]\n",
     "    prob += pulp.lpSum(vars_to_sum) >= 1\n",
     "\n",
-    "#each equipment must have at most \"num_sectors\" sectors\n",
+    "# #each equipment must have at most \"num_sectors\" sectors\n",
     "# for equip in equip_list:\n",
     "#     vars_to_sum = [choice_equip_sector[sector][equip] for sector in sector_list]\n",
     "#     prob += pulp.lpSum(vars_to_sum) <= total_per_equip.loc[equip, \"num_sectors\"]\n",
     "#     #prob += pulp.lpSum(vars_to_sum) <= 8\n",
     "\n",
-    "#only contiguous sectors are allowed\n",
-    "for equip in equip_list:\n",
-    "    num_sectors = [choice_equip_sector[sector][equip] for sector in sector_list]\n",
-    "    vars_to_sum = []\n",
-    "    for sector1 in sector_list:\n",
-    "        for sector2 in sector_list:\n",
-    "            vars_to_sum.append(adjacency_matrix.loc[sector1,sector2]\\\n",
-    "                               *choice_equip_sector[sector1][equip]\\\n",
-    "                               *choice_equip_sector[sector2][equip]\\\n",
-    "                               *(1/2) #to take into account that each adjacency shows up in both diagonal halfs of the matrix\n",
-    "                              )\n",
-    "    prob += pulp.lpSum(vars_to_sum) >= (pulp.lpSum(num_sectors) - 1)\n",
+    "# #only contiguous sectors are allowed\n",
+    "# for equip in equip_list:\n",
+    "#     num_sectors = [choice_equip_sector[sector][equip] for sector in sector_list]\n",
+    "#     vars_to_sum = []\n",
+    "#     for sector1 in sector_list:\n",
+    "#         for sector2 in sector_list:\n",
+    "#             vars_to_sum.append(adjacency_matrix.loc[sector1,sector2]\\\n",
+    "#                                *choice_equip_sector[sector1][equip])\n",
+    "#             vars_to_sum.append(adjacency_matrix.loc[sector1,sector2]\\\n",
+    "#                                *choice_equip_sector[sector2][equip])\n",
+    "      \n",
+    "#     prob += pulp.lpSum(vars_to_sum) >= (2*(pulp.lpSum(num_sectors) - 1))\n",
     "    \n",
     "prob.solve()\n",
     "end = time.time()\n",
@@ -1310,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1319,7 +1246,7 @@
      "text": [
       "Number of sectors after optimization:  730\n",
       "Number of radars after optimization:  95\n",
-      "Sum of the differences between actual and maximum number of sectors per radar:  0\n"
+      "Sum of the differences between actual and maximum number of sectors per radar:  590\n"
      ]
     }
    ],
@@ -1335,58 +1262,7 @@
     "total_diff = sectors_per_equip[\"diff\"].sum()\n",
     "print(\"Sum of the differences between actual and maximum number of sectors per radar: \", total_diff)\n",
     "\n",
-    "#df_solutions.to_csv(project_dir + \"/data/processed/od/optimized_sectors_per_radar_nomax.csv\", index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Normal:  1437472.90787\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Normal: \", prob.objective.value())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Max 8:  1096987.87606\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Max 8: \", prob.objective.value())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sem restricao:  629491.225571\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Sem restricao: \", prob.objective.value())"
+    "df_solutions.to_csv(project_dir + \"/data/processed/od/optimized_sectors_per_radar_nomax_1min.csv\", index=False)"
    ]
   }
  ],
