improvements in get_waze_rawdata, for more robust data sync from mongodb

--- a/notebooks/reports/201804_GabrielBogo_AccidentsDataCleaning.ipynb
+++ b/notebooks/reports/201804_GabrielBogo_AccidentsDataCleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -22,36 +22,18 @@
     "import pandas as pd\n",
     "import geopandas as gpd\n",
     "from shapely.geometry import Point\n",
-    "import geojson\n",
+    "from geojson import Feature\n",
+    "import json\n",
     "\n",
     "from src.data.processing_func import (connect_database, extract_geo_sections)\n",
     "\n",
-    "pd.options.display.max_columns = 50"
+    "pd.options.display.max_columns = 50\n",
+    "pd.options.display.max_rows = 500"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "DATABASE = {\n",
-    "'drivername': os.environ.get(\"db_drivername\"),\n",
-    "'host': os.environ.get(\"db_host\"), \n",
-    "'port': os.environ.get(\"db_port\"),\n",
-    "'username': os.environ.get(\"db_username\"),\n",
-    "'password': os.environ.get(\"db_password\"),\n",
-    "'database': os.environ.get(\"db_database\"),\n",
-    "}\n",
-    "\n",
-    "meta = connect_database(DATABASE)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -92,6 +74,32 @@
        "      <th>nomelog</th>\n",
        "      <th>st_length_</th>\n",
        "      <th>geometry</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>geojson</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -113,7 +121,10 @@
        "      <td>144</td>\n",
        "      <td>BERTHA WILL</td>\n",
        "      <td>143.662</td>\n",
-       "      <td>{'type': 'Point', 'coordinates': [713505.0141,...</td>\n",
+       "      <td>POINT (-48.86171860043524 -26.28529549889597)</td>\n",
+       "      <td>-48.861719</td>\n",
+       "      <td>-26.285295</td>\n",
+       "      <td>{\"type\": \"Feature\", \"geometry\": {\"type\": \"Poin...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -133,7 +144,10 @@
        "      <td>111</td>\n",
        "      <td>BLUMENAU</td>\n",
        "      <td>110.884</td>\n",
-       "      <td>{'type': 'Point', 'coordinates': [714573.5581,...</td>\n",
+       "      <td>POINT (-48.85074340009024 -26.3002972989172)</td>\n",
+       "      <td>-48.850743</td>\n",
+       "      <td>-26.300297</td>\n",
+       "      <td>{\"type\": \"Feature\", \"geometry\": {\"type\": \"Poin...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -153,13 +167,16 @@
        "      <td>111</td>\n",
        "      <td>BLUMENAU</td>\n",
        "      <td>110.884</td>\n",
-       "      <td>{'type': 'Point', 'coordinates': [714573.5581,...</td>\n",
+       "      <td>POINT (-48.85074340009024 -26.3002972989172)</td>\n",
+       "      <td>-48.850743</td>\n",
+       "      <td>-26.300297</td>\n",
+       "      <td>{\"type\": \"Feature\", \"geometry\": {\"type\": \"Poin...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Moto</td>\n",
        "      <td>719251</td>\n",
-       "      <td>7.09448e+09</td>\n",
+       "      <td>7.09448e+06</td>\n",
        "      <td>2.015e+07</td>\n",
        "      <td>01/01/2015</td>\n",
        "      <td>NOITE</td>\n",
@@ -173,13 +190,16 @@
        "      <td>774</td>\n",
        "      <td>ROGERIO PEREIRA</td>\n",
        "      <td>128.058</td>\n",
-       "      <td>{'type': 'Point', 'coordinates': [719250.6745,...</td>\n",
+       "      <td>POINT (-48.80480730035975 -26.25260409902171)</td>\n",
+       "      <td>-48.804807</td>\n",
+       "      <td>-26.252604</td>\n",
+       "      <td>{\"type\": \"Feature\", \"geometry\": {\"type\": \"Poin...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Bicicleta</td>\n",
        "      <td>719251</td>\n",
-       "      <td>7.09448e+09</td>\n",
+       "      <td>7.09448e+06</td>\n",
        "      <td>2.015e+07</td>\n",
        "      <td>01/01/2015</td>\n",
        "      <td>NOITE</td>\n",
@@ -193,43 +213,58 @@
        "      <td>774</td>\n",
        "      <td>ROGERIO PEREIRA</td>\n",
        "      <td>128.058</td>\n",
-       "      <td>{'type': 'Point', 'coordinates': [719250.6745,...</td>\n",
+       "      <td>POINT (-48.80480730035975 -26.25260409902171)</td>\n",
+       "      <td>-48.804807</td>\n",
+       "      <td>-26.252604</td>\n",
+       "      <td>{\"type\": \"Feature\", \"geometry\": {\"type\": \"Poin...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         entidade       X            Y         id        data      turno  \\\n",
-       "0  Obstaculo Fixo  713505  7.09096e+06  2.015e+07  01/01/2015  MADRUGADA   \n",
-       "1           Carro  714574  7.08928e+06  2.015e+07  01/01/2015      MANHA   \n",
-       "2           Carro  714574  7.08928e+06  2.015e+07  01/01/2015      MANHA   \n",
-       "3            Moto  719251  7.09448e+09  2.015e+07  01/01/2015      NOITE   \n",
-       "4       Bicicleta  719251  7.09448e+09  2.015e+07  01/01/2015      NOITE   \n",
+       "          entidade       X            Y         id        data      turno  \\\n",
+       "id                                                                          \n",
+       "0   Obstaculo Fixo  713505  7.09096e+06  2.015e+07  01/01/2015  MADRUGADA   \n",
+       "1            Carro  714574  7.08928e+06  2.015e+07  01/01/2015      MANHA   \n",
+       "2            Carro  714574  7.08928e+06  2.015e+07  01/01/2015      MANHA   \n",
+       "3             Moto  719251  7.09448e+06  2.015e+07  01/01/2015      NOITE   \n",
+       "4        Bicicleta  719251  7.09448e+06  2.015e+07  01/01/2015      NOITE   \n",
        "\n",
-       "     dia_da_sem numero_de              tipo              logradouro  \\\n",
-       "0  QUINTA-FEIRA         1    Obstaculo Fixo   Rua Benjamin Constant   \n",
-       "1  QUINTA-FEIRA         1     Carro x Carro  Rua Quinze de Novembro   \n",
-       "2  QUINTA-FEIRA         1     Carro x Carro  Rua Quinze de Novembro   \n",
-       "3  QUINTA-FEIRA         1  Moto x Bicicleta  Rua Martinho Van Biene   \n",
-       "4  QUINTA-FEIRA         1  Moto x Bicicleta  Rua Martinho Van Biene   \n",
+       "      dia_da_sem numero_de              tipo              logradouro  \\\n",
+       "id                                                                     \n",
+       "0   QUINTA-FEIRA         1    Obstaculo Fixo   Rua Benjamin Constant   \n",
+       "1   QUINTA-FEIRA         1     Carro x Carro  Rua Quinze de Novembro   \n",
+       "2   QUINTA-FEIRA         1     Carro x Carro  Rua Quinze de Novembro   \n",
+       "3   QUINTA-FEIRA         1  Moto x Bicicleta  Rua Martinho Van Biene   \n",
+       "4   QUINTA-FEIRA         1  Moto x Bicicleta  Rua Martinho Van Biene   \n",
        "\n",
-       "  ponto_de_r           bairro codlogra acumulo          nomelog st_length_  \\\n",
-       "0       1393         Glïż½ria     1294     144      BERTHA WILL    143.662   \n",
-       "1        844           Centro     1241     111         BLUMENAU    110.884   \n",
-       "2        844           Centro     1241     111         BLUMENAU    110.884   \n",
-       "3       1899  Jardim Iririïż½     8393     774  ROGERIO PEREIRA    128.058   \n",
-       "4       1899  Jardim Iririïż½     8393     774  ROGERIO PEREIRA    128.058   \n",
+       "   ponto_de_r           bairro codlogra acumulo          nomelog st_length_  \\\n",
+       "id                                                                            \n",
+       "0        1393         Glïż½ria     1294     144      BERTHA WILL    143.662   \n",
+       "1         844           Centro     1241     111         BLUMENAU    110.884   \n",
+       "2         844           Centro     1241     111         BLUMENAU    110.884   \n",
+       "3        1899  Jardim Iririïż½     8393     774  ROGERIO PEREIRA    128.058   \n",
+       "4        1899  Jardim Iririïż½     8393     774  ROGERIO PEREIRA    128.058   \n",
        "\n",
-       "                                            geometry  \n",
-       "0  {'type': 'Point', 'coordinates': [713505.0141,...  \n",
-       "1  {'type': 'Point', 'coordinates': [714573.5581,...  \n",
-       "2  {'type': 'Point', 'coordinates': [714573.5581,...  \n",
-       "3  {'type': 'Point', 'coordinates': [719250.6745,...  \n",
-       "4  {'type': 'Point', 'coordinates': [719250.6745,...  "
+       "                                         geometry  Longitude   Latitude  \\\n",
+       "id                                                                        \n",
+       "0   POINT (-48.86171860043524 -26.28529549889597) -48.861719 -26.285295   \n",
+       "1    POINT (-48.85074340009024 -26.3002972989172) -48.850743 -26.300297   \n",
+       "2    POINT (-48.85074340009024 -26.3002972989172) -48.850743 -26.300297   \n",
+       "3   POINT (-48.80480730035975 -26.25260409902171) -48.804807 -26.252604   \n",
+       "4   POINT (-48.80480730035975 -26.25260409902171) -48.804807 -26.252604   \n",
+       "\n",
+       "                                              geojson  \n",
+       "id                                                     \n",
+       "0   {\"type\": \"Feature\", \"geometry\": {\"type\": \"Poin...  \n",
+       "1   {\"type\": \"Feature\", \"geometry\": {\"type\": \"Poin...  \n",
+       "2   {\"type\": \"Feature\", \"geometry\": {\"type\": \"Poin...  \n",
+       "3   {\"type\": \"Feature\", \"geometry\": {\"type\": \"Poin...  \n",
+       "4   {\"type\": \"Feature\", \"geometry\": {\"type\": \"Poin...  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,10 +279,19 @@
     "            .replace(to_replace=\"\\\\b[Ss]a.*da\",value=\"Saida\",regex=True)\n",
     "            .replace(to_replace=\"\\\\b[Cc]aminh.*o\\\\b\",value=\"Caminhao\",regex=True)\n",
     "            .replace(to_replace=\"\\\\bCarro.*a\\\\b\",value=\"Carroca\",regex=True)\n",
+    "            .pipe(correct_latlon)\n",
     "            .pipe(extract_parts)\n",
     "            .pipe(generalize_entity)\n",
-    "            .pipe(create_geojson_point)\n",
+    "            .pipe(add_geometry)\n",
+    "            .pipe(convert_into_gdf)\n",
+    "            .pipe(add_geojson)\n",
+    "            .pipe(name_index)\n",
     "         )\n",
+    "    return df\n",
+    "\n",
+    "def correct_latlon(df):\n",
+    "    df.loc[df.X > 10**7,\"X\"] /= 1000\n",
+    "    df.loc[df.Y > 10**8,\"Y\"] /= 1000\n",
     "    return df\n",
     "\n",
     "def extract_parts(df):\n",
@@ -265,8 +309,8 @@
     "    df.loc[df['entidade'].str.contains('[Bb]icicleta'), 'entidade'] = 'Bicicleta'\n",
     "    return df\n",
     "    \n",
-    "def create_geojson_point(df):\n",
-    "    df[\"geometry\"] = df.apply(lambda row: geojson.Point((row[\"X\"], row[\"Y\"])), axis=1)\n",
+    "def add_geometry(df):\n",
+    "    df[\"geometry\"] = df.apply(lambda row: Point((row[\"X\"], row[\"Y\"])), axis=1)\n",
     "    return df\n",
     "\n",
     "def convert_into_gdf(df):  \n",
@@ -275,14 +319,26 @@
     "    gdf = gdf.to_crs({'init': 'epsg:4326'})\n",
     "    return gdf\n",
     "\n",
+    "def add_geojson(df):\n",
+    "    df[\"Longitude\"] = df.apply(lambda row: row.geometry.coords[0][0], axis=1)\n",
+    "    df[\"Latitude\"] = df.apply(lambda row: row.geometry.coords[0][1], axis=1)\n",
+    "    df[\"geojson\"] = df.apply(lambda row: json.dumps(Feature(geometry=row.geometry)), axis=1)\n",
+    "    return df\n",
+    "\n",
+    "def name_index(df):\n",
+    "    df.index.name = \"id\"\n",
+    "    return df\n",
+    "\n",
     "df_accidents = read_accidents(project_dir + \"/data/external/bombeiros_acidentes2015.csv\")\n",
     "df_accidents.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df_accidents.to_csv(project_dir + \"/data/processed/processed_accidents.csv\")"
